--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "moment": "^2.18.1",
     "vue": "^2.4.2",
+    "vue-router": "^3.0.0",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
